[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sauce Code Pro Nerd Font Complete Mono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/IngameSettings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[node name="IngameSettings" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 300.0
margin_right = -200.0
margin_bottom = -300.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 23
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="Label" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 640.0
margin_bottom = 1106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 26

[node name="TimerSetting" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 51.0

[node name="TimerToggle" type="CheckButton" parent="VBoxContainer/VBoxContainer/TimerSetting"]
margin_right = 76.0
margin_bottom = 51.0
pressed = true

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/TimerSetting"]
margin_left = 80.0
margin_right = 368.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "Ingame timer"

[node name="MovesSetting" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 640.0
margin_bottom = 128.0

[node name="MovesToggle" type="CheckButton" parent="VBoxContainer/VBoxContainer/MovesSetting"]
margin_right = 76.0
margin_bottom = 51.0
pressed = true

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/MovesSetting"]
margin_left = 80.0
margin_right = 536.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "Ingame move counter"

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 1129.0
margin_right = 640.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
custom_constants/separation = 30
alignment = 1

[node name="ResumeGame" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 215.0
margin_right = 425.0
margin_bottom = 60.0
size_flags_horizontal = 6
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "RESUME GAME"

[node name="ReturnHome" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 125.0
margin_top = 90.0
margin_right = 515.0
margin_bottom = 151.0
size_flags_horizontal = 6
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "RETURN TO HOME SCREEN"

[connection signal="toggled" from="VBoxContainer/VBoxContainer/TimerSetting/TimerToggle" to="." method="_on_TimerToggle_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/MovesSetting/MovesToggle" to="." method="_on_MovesToggle_toggled"]
[connection signal="pressed" from="VBoxContainer/Buttons/ResumeGame" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/ReturnHome" to="." method="_on_ReturnHome_pressed"]
